create store.js on front end

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <script type="text/javascript" src="app.bundle.js"></script>
+    <script type="text/javascript" src="/javascripts/app.bundle.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
