--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <script src="https://use.fontawesome.com/6b44726dce.js"></script>
     <script type="text/javascript" src="/javascripts/app.bundle.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
